--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "village",
+  "name": "web",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/village/src",
+  "sourceRoot": "apps/web/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,16 +10,16 @@
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
-        "outputPath": "dist/apps/village",
-        "index": "apps/village/src/index.html",
+        "outputPath": "dist/apps/web",
+        "index": "apps/web/src/index.html",
         "baseHref": "/",
-        "main": "apps/village/src/main.tsx",
-        "tsConfig": "apps/village/tsconfig.app.json",
-        "assets": ["apps/village/src/favicon.ico", "apps/village/src/assets"],
-        "styles": ["apps/village/src/styles.less"],
+        "main": "apps/web/src/main.tsx",
+        "tsConfig": "apps/web/tsconfig.app.json",
+        "assets": ["apps/web/src/favicon.ico", "apps/web/src/assets"],
+        "styles": ["apps/web/src/styles.less"],
         "scripts": [],
         "isolatedConfig": true,
-        "webpackConfig": "apps/village/webpack.config.js"
+        "webpackConfig": "apps/web/webpack.config.js"
       },
       "configurations": {
         "development": {
@@ -31,8 +31,8 @@
         "production": {
           "fileReplacements": [
             {
-              "replace": "apps/village/src/environments/environment.ts",
-              "with": "apps/village/src/environments/environment.prod.ts"
+              "replace": "apps/web/src/environments/environment.ts",
+              "with": "apps/web/src/environments/environment.prod.ts"
             }
           ],
           "optimization": true,
@@ -48,15 +48,15 @@
       "executor": "@nx/webpack:dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "village:build",
+        "buildTarget": "web:build",
         "hmr": true
       },
       "configurations": {
         "development": {
-          "buildTarget": "village:build:development"
+          "buildTarget": "web:build:development"
         },
         "production": {
-          "buildTarget": "village:build:production",
+          "buildTarget": "web:build:production",
           "hmr": false
         }
       }
@@ -65,20 +65,20 @@
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/village/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["apps/web/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "village:build"
+        "buildTarget": "web:build"
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/village/jest.config.ts",
+        "jestConfig": "apps/web/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
