--- a/package.json
+++ b/package.json
@@ -8,51 +8,51 @@
   },
   "private": true,
   "dependencies": {
-    "@swc/helpers": "~0.5.0",
+    "@swc/helpers": "0.5.12",
     "antd": "5.6.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "16.4.3",
-    "@nx/eslint-plugin": "16.4.3",
-    "@nx/jest": "16.4.3",
-    "@nx/js": "16.4.3",
-    "@nx/linter": "16.4.3",
-    "@nx/react": "16.4.3",
-    "@nx/webpack": "16.4.3",
-    "@nx/workspace": "16.4.3",
+    "@nx/cypress": "19.5.6",
+    "@nx/eslint-plugin": "19.5.6",
+    "@nx/jest": "19.5.6",
+    "@nx/js": "19.5.6",
+    "@nx/react": "19.5.6",
+    "@nx/webpack": "19.5.6",
+    "@nx/workspace": "19.5.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
-    "@testing-library/react": "14.0.0",
+    "@swc/cli": "0.3.14",
+    "@swc/core": "1.5.7",
+    "@testing-library/react": "15.0.6",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.13",
-    "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "babel-jest": "^29.4.1",
-    "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "cypress": "^13.0.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "2.15.2",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.4.3",
-    "nx-cloud": "latest",
+    "nx": "19.5.6",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
-    "url-loader": "^4.1.1"
+    "typescript": "5.5.4",
+    "url-loader": "^4.1.1",
+    "@nx/eslint": "19.5.6"
   }
 }
