--- a/package.json
+++ b/package.json
@@ -7,17 +7,11 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {
-    "@swc/helpers": "0.5.12",
-    "antd": "5.6.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tslib": "^2.3.0"
-  },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "19.5.6",
+    "@nx/eslint": "19.5.6",
     "@nx/eslint-plugin": "19.5.6",
     "@nx/jest": "19.5.6",
     "@nx/js": "19.5.6",
@@ -28,6 +22,7 @@
     "@svgr/webpack": "^8.0.1",
     "@swc/cli": "0.3.14",
     "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.12",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
@@ -35,6 +30,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
+    "antd": "^5.20.0",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "eslint": "8.57.0",
@@ -48,11 +44,13 @@
     "jest-environment-jsdom": "^29.4.1",
     "nx": "19.5.6",
     "prettier": "^2.6.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
     "typescript": "5.5.4",
-    "url-loader": "^4.1.1",
-    "@nx/eslint": "19.5.6"
+    "url-loader": "^4.1.1"
   }
 }
